# cogent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  pyproject.toml
.claude/: settings.json
.claude/rules/: folders.md  judge.md  kafka.md  sdk.md  search.md  server.md  storage.md
.github/workflows/: ci.yml  release.yml  security.yml
arch/: README.md  infra.md  judge.md  overview.md  sdk.md  server.md  services.md
cogent/sdk/: decorators.py  offload.py  telemetry.py
deploy/: README.md  docker-compose.yml
deploy/grafana/: datasources.yml
deploy/grafana/dashboards/: cogent-overview.json
deploy/prompts/: judge_default.txt
deploy/schema/: doris.sql  greptime.sql
deploy/scripts/: doris-init.sh  redpanda-init.sh
docs/: user-guide.adoc
examples/: multi_agent.py  single_agent.py
sdk/: __init__.py  offload.py  schema.py  telemetry.py
services/: Dockerfile  go.mod  go.sum
services/cmd/consumer-alerting/: main.go
services/cmd/consumer-doris/: main.go
services/cmd/consumer-greptime/: main.go
services/cmd/consumer-judge/: main.go
services/cmd/eval/: main.go
services/cmd/server/: main.go
services/internal/alert/: alert.go  alert_test.go
services/internal/config/: config.go  config_test.go
services/internal/consumer/: base.go  consumer_test.go
services/ui/: annotate.html  embed.go  index.html  span.html  trace.html
services/ui/static/: app.js  (+1 more)
tests/go/: consumer_test.go  judge_test.go
tests/python/: conftest.py  test_offload.py  test_schema.py  test_telemetry.py
(+11 files in other folders)
