[project]
name = "cogent"
version = "0.1.1"
description = "Stream-first observability for distributed LLM agents"
requires-python = ">=3.11"

[project.optional-dependencies]
sdk = [
    "kafka-python>=2.0",
    "pydantic>=2.0",
    "minio>=7.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cogent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/python"]
